Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-909

Parquet will spew with thrift deserialize errors even if the error is expected.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • Impala 1.3
    • Impala 1.3.1
    • None
    • None

    Description

      Since we don't know how big the page header will be, we sometimes try to deserialize a header that is split across io buffers.

      The code handles this case by no problem but this results in a confusing message in the log.

      Attachments

        Activity

          People

            nong_impala_60e1 Nong Li
            nong_impala_60e1 Nong Li
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: