IMPALA-909: Remove error stack in logs from parquet scanner if the error is expected.

Change-Id: Idb78e025f249424c324167bb44d32fe3d6c83259
Reviewed-on: http://gerrit.ent.cloudera.com:8080/2077
Reviewed-by: Nong Li <nong@cloudera.com>
Tested-by: jenkins